# Team_2

./: .gitignore  README.md  pyproject.toml  simplifications_task_llm.py
evaluation/: results_test_one_shot.xlsx
evaluation/submissions/Team_2/: results_test_two_shot.xlsx  results_test_zero_shot.xlsx  results_trial_one_shot.xlsx  results_trial_two_shot.xlsx  results_trial_zero_shot.xlsx  test_data_one_shot.jsonl  test_data_two_shot.jsonl  test_data_zero_shot.jsonl  trial_data_one_shot.jsonl  trial_data_two_shot.jsonl  trial_data_zero_shot.jsonl  tsar2025_evaluation_script.py
evaluation/t5_evaluation/testdata_results/: -1.0_flan_t5_large_validation_results.csv  0.0_flan_t5_large_validation_results.csv  1.0_flan_t5_large_validation_results.csv
evaluation/t5_evaluation/trialdata_results/: -0.5_flan_t5_large_validation_results.csv  -1.0_flan_t5_large_validation_results.csv  0.0_flan_t5_large_validation_results.csv  0.0_flan_t5_small_validation_results.csv  0.4_eilamc14_validation_results.csv  0.4_flan_t5_large_validation_results.csv  0.4_flan_t5_small_validation_results.csv  0.4_mrmm_validation_results.csv  0.7_flan_t5_large_validation_results.csv  0.7_flan_t5_small_validation_results.csv  1.0_flan_t5_large_validation_results.csv  1.0_flan_t5_small_validation_results.csv  1.0_mrmm_validation_results.csv  1.5_flan_t5_large_validation_results.csv
notebooks/: 01_marimo_tutorial.py  02_rnns_lstms_seq2seq.py  03_attention.py  04_transformer_based_models.py  06_prompt_engineering.py  gpt2_playground.py  tsar_llm_baseline.py
