[project]
name = "anlp-ws202526"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "altair>=6.0.0",
    "anthropic>=0.55.0",
    "bert-score>=0.3.13",
    "datasets>=3.6.0",
    "evaluate>=0.4.0",
    "gensim>=4.3.3",
    "google-auth>=2.45.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=2.18.2",
    "google-genai>=1.55.0",
    "instructor[litellm]>=1.13.0",
    "litellm>=1.80.10",
    "marimo>=0.19.0",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "openai-agents>=0.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1",
    "polars>=1.26.0",
    "protobuf>=6.33.2",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.4",
    "torch>=2.7.0",
    "transformers>=4.55.0",
]


[dependency-groups]
dev = ["black>=25.1.0", "jupyter>=1.1.1", "ruff>=0.12.1", "marimo>=0.14.9"]


[tool.ruff]
line-length = 120
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["notebooks/*.py"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
